# SIMPyON

./: .readthedocs.yaml  README.rst  jansen.ger  pyproject.toml
docs/source/: index.rst
src/SIMPyON/: ReadData.py  SIMION.py  SIMION_PA.py  SIMION_reader.py  detector.py  electrodes.py  example.py  filenames.py  functionsSimion.py  optimization.py  readSimion.py  test.py
src/SIMPyON/docs/source/: conf.py
src/SIMPyON/examples/: load_toml.py
src/SIMPyON/resources/files/: setup.iob  setup.rec
src/SIMPyON/utils/: file_management.py  fly2_file.py  gem_file.py  strings.py  toml_file.py
